@@ -225,6 +225,7 @@ Changes since 2.2.4
 
 98. Changed the json module to use structs instead of associative
     arrays.  (Paul Boekholt).
+99. src/slassoc.c: Add C API SLang_assoc_key_exists (Paul Boekholt).
 
 {{{ Previous Versions
 
